@@ -2,6 +2,7 @@ Version 1.3.10+svn:
  * campaign server
    * fixed a bug which broke uploads with a .cfg file next to the campaign
      directory
+   * enhanced wescamp integration (still not finished)
  * graphics:
    * added user-contributed graphic updates for 'storm trident', 'ankh' and 'staff'
      pick-up items
